web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-09-20T06:48:14Z"
  generation: 3
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "55107"
  uid: baee71de-52b2-4220-a1f1-41c102d8e4b2
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
        - image: docker.io/bootdotdev/synergychat-web:latest
          imagePullPolicy: Always
          name: synergychat-web
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 10
  conditions:
    - lastTransitionTime: "2025-09-20T06:48:14Z"
      lastUpdateTime: "2025-09-20T06:48:20Z"
      message: ReplicaSet "synergychat-web-76dd6b65c5" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-09-20T22:28:13Z"
      lastUpdateTime: "2025-09-20T22:28:13Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
  observedGeneration: 3
  readyReplicas: 10
  replicas: 10
  updatedReplicas: 10
