web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: synergychat-web
  ports:
    - protocol: TCP
      port: 80 # External facing port Service listens on
      targetPort: 8080 # Internal port Pods are listening on
